# GTD-Pedagogico-Unioeste

./: AGENTS.md  PLAN.md  PROJECT_CONTEXT.md  README.md  STATE.md  projeto  pyproject.toml
docs/: staging-postgresql.md
scripts/: postgresql_staging_smoke.sh
src/gtd_backend/: __init__.py  auth.py  http.py  persistence.py  rf01.py  rf02.py  rf03.py  rf04.py  rf05.py  rf06.py  rf07.py  rf08.py  rf09.py  rf10.py
src/gtd_backend/db/migrations/postgresql/: 0001_baseline.sql
src/gtd_backend/db/migrations/sqlite/: 0001_baseline.sql
tests/: test_auth.py  test_auth_http.py  test_persistence.py  test_postgresql_staging.py  test_rf01.py  test_rf02.py  test_rf03.py  test_rf04.py  test_rf05.py  test_rf06.py  test_rf07.py  test_rf08.py  test_rf09.py  test_rf10.py
