[project]
name = "gtd-pedagogico-unioeste"
version = "0.1.0"
description = "Backend base do GTD Pedagógico Unioeste"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
