[project]
name = "gtd-pedagogico-unioeste"
version = "0.1.0"
description = "Backend base do GTD Pedagógico Unioeste"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23.1.0",
  "fastapi (>=0.135.2,<0.136.0)",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: testes de integração",
  "postgresql: testes dependentes de PostgreSQL real",
]
